# MetaMart

./: .gitignore  .vercelignore  PROJECT_PLAN_QualityScore.md  README.md  docker-compose.yml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  alembic.ini  main.py  pyproject.toml  score.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_m70_mart_core.py  0002_m70_specializations.py
backend/seed_data/: northwind.json  warehouse_messy.json
backend/src/metamart/: audit.py  auth.py  config.py  db.py  main.py  permissions.py
backend/src/metamart/mart/: ingest.py  models.py  repo.py  router.py  schemas.py  specializations.py  temporal.py  versioning.py
backend/src/metamart/quality/: __init__.py  adapters.py  catalog.py  engine.py  erwin_format.py  ingest_json.py  pack.py  registry.py  router.py  schemas.py  scoring.py  types.py
backend/src/metamart/quality/rules/: __init__.py  datatypes.py  glossary.py  lineage.py  naming.py  normalization.py  orphans.py  pks.py
backend/tests/: _synth.py  test_adapters.py  test_engine.py  test_fixes.py  test_ingest.py  test_pack_overrides.py  test_permissions.py  test_quality_score_endpoint.py  test_registry.py  test_rules.py  test_rules_e2e.py  test_scoring.py  test_smoke.py  test_temporal.py
docs/: AUTOFIX.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/samples/: greenfield.json
frontend/src/: App.tsx  api.ts  index.css  ruleInfo.ts  storage.ts  types.ts
frontend/src/components/: Banner.tsx  CompareTab.tsx  Sidebar.tsx  (+9 more)
